[gd_scene format=3 uid="uid://xhovckacar7d"]

[ext_resource type="Script" uid="uid://blxki3kf7a4qf" path="res://scenes/ui/pause_menu.gd" id="1_6tw0m"]
[ext_resource type="Texture2D" uid="uid://cu0x86uylsqor" path="res://ui/pause/menu de pause fundo.png" id="2_0lmf7"]
[ext_resource type="Texture2D" uid="uid://c2qvy2finf4ap" path="res://ui/pause/título pause.png" id="3_8uki6"]
[ext_resource type="FontFile" uid="uid://3yyrl8cdr2cb" path="res://assets/fonts/Brasilero2018Free.otf" id="4_0bnpd"]
[ext_resource type="Texture2D" uid="uid://032k2jya2c7m" path="res://ui/pause/caixa tickada.png" id="5_4inpj"]
[ext_resource type="Texture2D" uid="uid://ygury0each8q" path="res://ui/pause/caixa tick.png" id="6_8fwbo"]
[ext_resource type="StyleBox" uid="uid://dfl6oet8o335d" path="res://components/optionmenu_style_box_flat.tres" id="7_8fwbo"]

[node name="PauseMenu" type="CanvasLayer" unique_id=1741674351]
process_mode = 3
layer = 5
script = ExtResource("1_6tw0m")

[node name="TextureRect" type="TextureRect" parent="." unique_id=908269853]
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("2_0lmf7")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="." unique_id=487148812]
offset_left = 229.0
offset_top = 132.0
offset_right = 823.0
offset_bottom = 274.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_8uki6")

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect2" unique_id=1874164897]
layout_mode = 0
offset_left = 14.0
offset_top = 12.0
offset_right = 576.0
offset_bottom = 132.0
theme_override_colors/default_color = Color(0.03137255, 0.2784314, 0.39607844, 1)
theme_override_fonts/normal_font = ExtResource("4_0bnpd")
theme_override_font_sizes/normal_font_size = 100
text = "Pausa"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=34087808]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.0
offset_top = -146.0
offset_right = 257.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2

[node name="OpcoesPrincipais" type="VBoxContainer" parent="CenterContainer" unique_id=1574703408]
layout_mode = 2

[node name="Continuar" type="Button" parent="CenterContainer/OpcoesPrincipais" unique_id=663534582]
layout_mode = 2
theme_override_colors/font_color = Color(0.03137255, 0.2784314, 0.39607844, 1)
theme_override_colors/font_hover_color = Color(0.8745098, 0.4862745, 0.6392157, 1)
theme_override_fonts/font = ExtResource("4_0bnpd")
theme_override_font_sizes/font_size = 24
text = "Continuar"
flat = true

[node name="Audio" type="Button" parent="CenterContainer/OpcoesPrincipais" unique_id=1371369163]
layout_mode = 2
theme_override_colors/font_color = Color(0.03137255, 0.2784314, 0.39607844, 1)
theme_override_colors/font_hover_color = Color(0.8745098, 0.4862745, 0.6392157, 1)
theme_override_fonts/font = ExtResource("4_0bnpd")
theme_override_font_sizes/font_size = 24
text = "Configurações de Áudio"
flat = true

[node name="Graficos" type="Button" parent="CenterContainer/OpcoesPrincipais" unique_id=34662548]
layout_mode = 2
theme_override_colors/font_color = Color(0.03137255, 0.2784314, 0.39607844, 1)
theme_override_colors/font_hover_color = Color(0.8745098, 0.4862745, 0.6392157, 1)
theme_override_fonts/font = ExtResource("4_0bnpd")
theme_override_font_sizes/font_size = 24
text = "Configurações de Gráfico"
flat = true

[node name="Sair" type="Button" parent="CenterContainer/OpcoesPrincipais" unique_id=1354066130]
layout_mode = 2
theme_override_colors/font_color = Color(0.03137255, 0.2784314, 0.39607844, 1)
theme_override_colors/font_hover_color = Color(0.8745098, 0.4862745, 0.6392157, 1)
theme_override_fonts/font = ExtResource("4_0bnpd")
theme_override_font_sizes/font_size = 24
text = "Sair do Jogo"
flat = true

[node name="OpcoesAudio" type="VBoxContainer" parent="CenterContainer" unique_id=154248764]
visible = false
custom_minimum_size = Vector2(500, 540)
layout_mode = 2
alignment = 1

[node name="Geral" type="RichTextLabel" parent="CenterContainer/OpcoesAudio" unique_id=1623258537]
layout_mode = 2
theme_override_colors/default_color = Color(0.03137255, 0.2784314, 0.39607844, 1)
theme_override_fonts/normal_font = ExtResource("4_0bnpd")
theme_override_font_sizes/normal_font_size = 24
text = "Volume Geral"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="GeralSlider" type="HSlider" parent="CenterContainer/OpcoesAudio" unique_id=975560525]
modulate = Color(0.03137255, 0.2784314, 0.39607844, 1)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Musica" type="RichTextLabel" parent="CenterContainer/OpcoesAudio" unique_id=1750967417]
layout_mode = 2
theme_override_colors/default_color = Color(0.03137255, 0.2784314, 0.39607844, 1)
theme_override_fonts/normal_font = ExtResource("4_0bnpd")
theme_override_font_sizes/normal_font_size = 24
text = "Música"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicaSlider" type="HSlider" parent="CenterContainer/OpcoesAudio" unique_id=810868302]
modulate = Color(0.03137255, 0.2784314, 0.39607844, 1)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFX" type="RichTextLabel" parent="CenterContainer/OpcoesAudio" unique_id=875956632]
layout_mode = 2
theme_override_colors/default_color = Color(0.03137255, 0.2784314, 0.39607844, 1)
theme_override_fonts/normal_font = ExtResource("4_0bnpd")
theme_override_font_sizes/normal_font_size = 24
text = "SFX"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="CenterContainer/OpcoesAudio" unique_id=1578281567]
modulate = Color(0.03137255, 0.2784314, 0.39607844, 1)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Voltar" type="Button" parent="CenterContainer/OpcoesAudio" unique_id=240891088]
layout_mode = 2
theme_override_colors/font_color = Color(0.03137255, 0.2784314, 0.39607844, 1)
theme_override_colors/font_hover_color = Color(0.8745098, 0.4862745, 0.6392157, 1)
theme_override_fonts/font = ExtResource("4_0bnpd")
theme_override_font_sizes/font_size = 24
text = "Voltar"
flat = true

[node name="OpcoesGrafico" type="VBoxContainer" parent="CenterContainer" unique_id=649112251]
visible = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="TelaCheia" type="CheckButton" parent="CenterContainer/OpcoesGrafico" unique_id=168954824]
layout_mode = 2
theme_override_colors/font_color = Color(0.03137255, 0.2784314, 0.39607844, 1)
theme_override_colors/font_focus_color = Color(0.8745098, 0.47843137, 0.627451, 1)
theme_override_colors/font_pressed_color = Color(0.8745098, 0.47843137, 0.627451, 1)
theme_override_colors/font_hover_color = Color(0.8745098, 0.47843137, 0.627451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.8745098, 0.47843137, 0.627451, 1)
theme_override_fonts/font = ExtResource("4_0bnpd")
theme_override_font_sizes/font_size = 24
theme_override_colors/button_checked_color = Color(0.8745098, 0.47843137, 0.627451, 1)
theme_override_icons/checked = ExtResource("5_4inpj")
theme_override_icons/unchecked = ExtResource("6_8fwbo")
text = "Tela cheia"

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/OpcoesGrafico" unique_id=1881680357]
layout_mode = 2
theme_override_colors/default_color = Color(0.03137255, 0.2784314, 0.39607844, 1)
theme_override_fonts/normal_font = ExtResource("4_0bnpd")
theme_override_font_sizes/normal_font_size = 24
text = "Resolução"
fit_content = true

[node name="ResolucoesMenu" type="OptionButton" parent="CenterContainer/OpcoesGrafico" unique_id=677074884]
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.47843137, 0.627451, 1)
theme_override_fonts/font = ExtResource("4_0bnpd")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("7_8fwbo")
theme_override_styles/pressed = ExtResource("7_8fwbo")
theme_override_styles/hover = ExtResource("7_8fwbo")

[node name="Voltar" type="Button" parent="CenterContainer/OpcoesGrafico" unique_id=1220468236]
layout_mode = 2
theme_override_colors/font_color = Color(0.03137255, 0.2784314, 0.39607844, 1)
theme_override_colors/font_hover_color = Color(0.8745098, 0.4862745, 0.6392157, 1)
theme_override_fonts/font = ExtResource("4_0bnpd")
theme_override_font_sizes/font_size = 24
text = "Voltar"
flat = true

[connection signal="pressed" from="CenterContainer/OpcoesPrincipais/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="CenterContainer/OpcoesPrincipais/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="CenterContainer/OpcoesPrincipais/Graficos" to="." method="_on_graficos_pressed"]
[connection signal="pressed" from="CenterContainer/OpcoesPrincipais/Sair" to="." method="_on_sair_pressed"]
[connection signal="value_changed" from="CenterContainer/OpcoesAudio/GeralSlider" to="." method="_on_geral_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/OpcoesAudio/MusicaSlider" to="." method="_on_musica_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/OpcoesAudio/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/OpcoesAudio/Voltar" to="." method="_on_voltar_pressed"]
[connection signal="toggled" from="CenterContainer/OpcoesGrafico/TelaCheia" to="." method="_on_tela_cheia_toggled"]
[connection signal="item_selected" from="CenterContainer/OpcoesGrafico/ResolucoesMenu" to="." method="_on_resolucoes_menu_item_selected"]
[connection signal="pressed" from="CenterContainer/OpcoesGrafico/Voltar" to="." method="_on_voltar_pressed"]
